--- a/02.Star/app/src/main/res/layout/activity_main.xml
+++ b/02.Star/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="kr.pe.burt.android.star.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <kr.pe.burt.android.star.OGLView
+        android:id="@+id/oglView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
